[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ProxyGrab"
author = "Skuzzy xD"
author-email = "techdroidroot@gmail.com"
home-page = "https://proxygrab.skuzzers.xyz"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
        "Topic :: Internet :: WWW/HTTP"
    ]
requires = [
    "requests>=2.20",
    "click",
    "bs4"
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://proxygrab.skuzzers.xyz/"

[tool.flit.scripts]
proxygrab = "proxygrab.cmdline:clicmd"

[tool.flit.metadata.requires-extra]
doc = [
    "mkdocs",
    "black",
    "mkdocs-material",
    "mkdocs-git-revision-date-plugin"
]

all = [
    "requests>=2.20",
    "click",
    "bs4",
    "mkdocs",
    "black",
    "mkdocs-material",
    "mkdocs-git-revision-date-plugin"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''