[tool.poetry]
name = "ProxyGrab"
version = "1.2.5"
description = "Asynchronous Library to scrap proxies for my web scrapping applications and other testing purposes"
authors = ["Divkix <techdroidroot@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Divkix/ProxyGrab"
repository = "https://github.com/Divkix/ProxyGrab"
documentation= "https://proxygrab.divkix.me"
keywords = ["proxygrab", "proxy scrapper", "proxy grabber"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
    ]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
proxygrab = "proxygrab.cmdline:clicmd"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Divkix/ProxyGrab/issues"
"Community" = "https://t.me/DivideProjects"


[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^3.0.0"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.10.0"
cchardet = "^2.1.7"
click = "^8.1.2"
lxml = "^4.8.0"
ujson = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
isort = "^5.8.0"
mkdocs = "^1.1.2"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-material = "^8.0.1"
pre-commit = "^2.12.0"
pyclean = "^2.0.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
